big changes to get involved, about, fair info. attempts to fix insta plugin, adds MailChimp plugin, various smaller style changes

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -5,31 +5,27 @@ type: "getInvolved"
 
 import OutButton from "../../components/Utility/OutButton/OutButton"
 
-### Join the Mind Body Spirit Fair community
+# Get Involved
+
+## Join the Mind Body Spirit Fair community
 
 (Find your tribe & feel the vibe!)
 
 If you are in the health, wellbeing, inspiration or sustainability business, your local and international customers are here and ready to connect with you!
 
+<div id="exhibit" />
+
 At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health and wellness seeking visitors who are looking for You! Something generic fairs can’t provide.
 
 As well as being Bangkok’s first dedicated holistic healing and wellness event, MBSBKK is a charity fundraiser, supporting local projects, directly benefiting Thai people. Find out more about our charitable contributions. Join us and give back. Together we can make a difference.
 
-Here’s how you can get involved:
+---
 
-### Exhibit with us
+## Exhibit with us
 
-Take a **stall** to sell, promote or showcase your products or services, in a purchase ready, niche customer environment. Our visitors are gonna want what you have!
+**Take a stall to sell**, promote or showcase your products or services, in a purchase ready, niche customer environment. Our visitors are gonna want what you have!
 
-### Inspire with us
-
-Offer a 50 minute experiential **workshop or presentation**. Showcase your expertise and share your passions with a targeted and curated audience.
-
-### Heal with us
-
-Provide one on one paid **taster sessions** for visitors in the Healing Zone.
-
-## Exhibitor’s appreciation:
+### Exhibitor’s appreciation:
 
 _“The event exceeded all expectations, the only regret was that our stall was so busy, we wished we would have been able to experience the whole thing more. What a great ‘problem’ to have. We can’t wait for the next one”_
 
@@ -39,19 +35,41 @@ _“It was such a pleasure to meet so many individuals of like minds! No explana
 
 _“From a workshop presenter point of view, the event was very well organised! Loved how the assigned volunteers took care of every request we had.”_
 
-<OutButton path="google.com" text="Apply Now" />
+<div id="inspire" />
 
-Please note that MBSBKK is a carefully curated event and places are limited. Please complete all applications fully and in a way that reflects your passion for what you are offering.
+<OutButton path="https://www.google.com" text="Apply Now" />
 
-**ONLY COMPLETE AND WHOLEHEARTED APPLICATIONS CAN BE CONSIDERED.**
+---
 
-Close adherence to deadlines as they arise is essential.
+## Inspire with us
+
+<div id="heal" />
+
+Offer a 50 minute experiential **workshop or presentation**. Showcase your expertise and share your passions with a targeted and curated audience.
+
+<OutButton path="https://www.google.com" text="Apply Now" />
+
+---
+
+## Heal with us
+
+<div id="sponsor" />
+
+Provide one on one paid **taster sessions** for visitors in the Healing Zone.
+
+<OutButton path="https://www.google.com" text="Apply Now" />
+
+---
 
 ## Sponsor us
+
+<div id="volunteer" />
 
 Support us and be seen by your target customers. Contact us here to discuss sponsorship opportunities.
 
 <OutButton path="mailto:info@mbsbkk.com" text="Sponsor Us" />
+
+---
 
 ## Volunteer with us
 
@@ -59,6 +77,10 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
 
 <OutButton path="https://goo.gl/forms/ALHLQ1i6y7nNEBpb2" text="Volunteer" />
 
-Have questions? Check out our FAQ page.
+---
 
-For other enquiries please email <span><a href="mailto:info@mbsbkk.com">info@mbsbkk.com</a></span>
+- MBSBKK is a carefully curated event and places are limited. Please complete all applications fully and in a way that reflects your passion for what you are offering.
+
+- Only complete and wholehearted applications can be considered.
+
+- Close adherence to deadlines as they arise is essential.
