accessibility pass - alt tags, aria labels. social cards

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -37,7 +37,10 @@ _“From a workshop presenter point of view, the event was very well organised! 
 
 <div id="inspire" />
 
-<OutButton path="https://www.google.com" text="Apply Now" />
+<OutButton
+  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
+  text="Apply Now"
+/>
 
 ---
 
@@ -47,7 +50,10 @@ _“From a workshop presenter point of view, the event was very well organised! 
 
 Offer a 50 minute experiential **workshop or presentation**. Showcase your expertise and share your passions with a targeted and curated audience.
 
-<OutButton path="https://www.google.com" text="Apply Now" />
+<OutButton
+  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
+  text="Apply Now"
+/>
 
 ---
 
@@ -57,7 +63,10 @@ Offer a 50 minute experiential **workshop or presentation**. Showcase your exper
 
 Provide one on one paid **taster sessions** for visitors in the Healing Zone.
 
-<OutButton path="https://www.google.com" text="Apply Now" />
+<OutButton
+  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
+  text="Apply Now"
+/>
 
 ---
 
@@ -67,7 +76,10 @@ Provide one on one paid **taster sessions** for visitors in the Healing Zone.
 
 Support us and be seen by your target customers. Contact us here to discuss sponsorship opportunities.
 
-<OutButton path="mailto:info@mbsbkk.com" text="Sponsor Us" />
+<OutButton
+  path="mailto:info@mbsbkk.com?subject=Sponsorship%Enquiry"
+  text="Sponsor Us"
+/>
 
 ---
 
