various small changes and fixes as requested in meeting

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -18,7 +18,7 @@ We are so excited to welcome you to our next inspiring event!
 
 ---
 
-Advanced ticket bookings open on January 5th 2020
+**Advanced ticket bookings open on January 5th 2020**
 
 Stay in the loop and be the first to know about the exciting new ticket details and packages opening up this year! Plus other offers, booking opportunities, workshops, Healing Zone and Exhibitor’s information.
 
