adds chiang mai buttons

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -4,6 +4,7 @@ type: "getInvolved"
 ---
 
 import OutButton from "../../components/Utility/OutButton/OutButton"
+import DoubleButton from "../../components/Utility/DoubleButton/DoubleButton"
 
 # Get Involved
 
@@ -37,9 +38,16 @@ _“From a workshop presenter point of view, the event was very well organised! 
 
 <div id="inspire" />
 
-<OutButton
-  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
-  text="Apply Now"
+<DoubleButton
+  link1={{
+    link:
+      "https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form",
+    text: "Apply Now BKK",
+  }}
+  link2={{
+    link: "https://forms.gle/zYeTpe8oyE9JRTCi6",
+    text: "Apply Now CM",
+  }}
 />
 
 ---
@@ -50,9 +58,16 @@ _“From a workshop presenter point of view, the event was very well organised! 
 
 Offer a 50 minute experiential **workshop or presentation**. Showcase your expertise and share your passions with a targeted and curated audience.
 
-<OutButton
-  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
-  text="Apply Now"
+<DoubleButton
+  link1={{
+    link:
+      "https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form",
+    text: "Apply Now BKK",
+  }}
+  link2={{
+    link: "https://forms.gle/zYeTpe8oyE9JRTCi6",
+    text: "Apply Now CM",
+  }}
 />
 
 ---
@@ -63,9 +78,16 @@ Offer a 50 minute experiential **workshop or presentation**. Showcase your exper
 
 Provide one on one paid **taster sessions** for visitors in the Healing Zone.
 
-<OutButton
-  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
-  text="Apply Now"
+<DoubleButton
+  link1={{
+    link:
+      "https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form",
+    text: "Apply Now BKK",
+  }}
+  link2={{
+    link: "https://forms.gle/zYeTpe8oyE9JRTCi6",
+    text: "Apply Now CM",
+  }}
 />
 
 ---
