adds Chiang Mai specific info

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -8,7 +8,17 @@ number: 1
 
 ## The Heads Up
 
-We are so excited to welcome you to our next inspiring event!
+We are so excited to welcome you to our upcoming inspiring events!
+
+## Chiang Mai:
+
+**Date:** 30th November - 1st December 2019
+
+**Event Times:** 9:30am - 6pm both days
+
+**Event Location:** [ChiangMai&Co](https://goo.gl/maps/LPfGs6XuV9yvQqWr8)
+
+## Bangkok:
 
 **Date:** 29th February - 1st March 2020
 
@@ -24,7 +34,7 @@ Stay in the loop and be the first to know about the exciting new ticket details 
 
 Follow us on social media to stay informed as announcements are made - links below.
 
-All proceeds go to [The Fatima Centre](https://goodshepherdbangkok.com/).
+Proceeds go to [The Fatima Centre](https://goodshepherdbangkok.com/).
 
 ---
 
