--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -109,7 +109,16 @@ Support us and be seen by your target customers. Contact us here to discuss spon
 
 Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the community and share your energy. Our dedicated team of volunteers support the smooth running of the fair, whilst getting to experience it in the most intimate way.
 
-<OutButton path="https://goo.gl/forms/ALHLQ1i6y7nNEBpb2" text="Volunteer" />
+<DoubleButton
+  link1={{
+    link: "https://goo.gl/forms/ALHLQ1i6y7nNEBpb2",
+    text: "Volunteer BKK",
+  }}
+  link2={{
+    link: "https://forms.gle/Y2WrqjqKo2Qw1GxG7",
+    text: "Volunteer CM",
+  }}
+/>
 
 ---
 
