--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -4,6 +4,8 @@ type: "fairInfo"
 number: 1
 ---
 
+import AltColorStrong from "../../components/Utility/AltColorStrong/AltColorStrong"
+
 # Fair Info
 
 ## The Heads Up
@@ -12,11 +14,12 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 ## Chiang Mai:
 
-**Date:** 30th November - 1st December 2019
+<p><AltColorStrong >Date: </ AltColorStrong> 30th November - 1st December 2019</p>
 
-**Event Times:** 9:30am - 6pm both days
+<p><AltColorStrong >Event Times: </ AltColorStrong> 9:30am - 6pm both days</p>
 
-**Event Location:** [ChiangMai&Co](https://goo.gl/maps/LPfGs6XuV9yvQqWr8)
+<p><AltColorStrong >Event Location: </ AltColorStrong> <a href="https://goo.gl/maps/LPfGs6XuV9yvQqWr8">ChiangMai&Co</a></p>
+
 
 ## Bangkok:
 
