adds advance ticket bookings message for chiang mai

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -20,6 +20,7 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 <p><AltColorStrong >Event Location: </ AltColorStrong> <a href="https://goo.gl/maps/LPfGs6XuV9yvQqWr8">ChiangMai&Co</a></p>
 
+<p><AltColorStrong >Advanced ticket bookings open on October 25th 2019 </ AltColorStrong></p>
 
 ## Bangkok:
 
@@ -29,9 +30,9 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 **Event Location:** [Jasmine City Hotel, Sukhumvit Soi 23, Asok](https://goo.gl/maps/jshrHKFmhR8h7ms7A)
 
----
-
 **Advanced ticket bookings open on January 5th 2020**
+
+---
 
 Stay in the loop and be the first to know about the exciting new ticket details and packages opening up this year! Plus other offers, booking opportunities, workshops, Healing Zone and Exhibitor’s information.
 
