small changes before going live

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -5,6 +5,7 @@ type: "getInvolved"
 
 import OutButton from "../../components/Utility/OutButton/OutButton"
 import DoubleButton from "../../components/Utility/DoubleButton/DoubleButton"
+import {Link} from "gatsby"
 
 # Get Involved
 
@@ -18,7 +19,9 @@ If you are in the health, wellbeing, inspiration or sustainability business, you
 
 At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health and wellness seeking visitors who are looking for You! Something generic fairs can’t provide.
 
-As well as being Bangkok’s first dedicated holistic healing and wellness event, MBSBKK is a charity fundraiser, supporting local projects, directly benefiting Thai people. Find out more about our charitable contributions. Join us and give back. Together we can make a difference.
+<p>As well as being Bangkok’s first dedicated holistic healing and wellness event, MBSBKK is a charity fundraiser, supporting local projects, directly benefiting Thai people. <Link to="/charities">Find out more about our charities here.</Link></p> 
+
+<p>Join us and give back. Together we can make a difference.</p>
 
 ---
 
