Changes some copy and formating on GEt Involved and Fair Info, changes lead text on home, changes twitter/og images

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -5,10 +5,12 @@ number: 1
 ---
 
 import AltColorStrong from "../../components/Utility/AltColorStrong/AltColorStrong"
+import MailChimpContainer from "../../components/Spacing/MailChimpContainer/MailChimpContainer"
+import SocialContainer from "../../components/Spacing/SocialContainer/SocialContainer"
+import MailChimp from "../../components/Utility/MailChimp/MailChimp"
+import Social from "../../components/Layout/Header/Social/Social"
 
 # Fair Info
-
-## The Heads Up
 
 We are so excited to welcome you to our upcoming inspiring events!
 
@@ -34,11 +36,17 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 ---
 
-Stay in the loop and be the first to know about the exciting new ticket details and packages opening up this year! Plus other offers, booking opportunities, workshops, Healing Zone and Exhibitor’s information.
+Stay in the loop and be the first to know about the exciting new ticket details and packages opening up this year by subscribing to our newsletter! Plus other offers, booking opportunities, workshops, Healing Zone and Exhibitor’s information.
+
+<MailChimpContainer>
+  <MailChimp />
+</MailChimpContainer>
 
 Follow us on social media to stay informed as announcements are made - links below.
 
-Proceeds go to [The Fatima Centre](https://goodshepherdbangkok.com/).
+<SocialContainer>
+  <Social />
+</SocialContainer>
 
 ---
 
