--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -5,7 +5,8 @@ type: "getInvolved"
 
 import OutButton from "../../components/Utility/OutButton/OutButton"
 import DoubleButton from "../../components/Utility/DoubleButton/DoubleButton"
-import {Link} from "gatsby"
+import IndividualTestimonial from "../../components/Utility/IndividualTestimonial/IndividualTestimonial"
+import { Link } from "gatsby"
 
 # Get Involved
 
@@ -19,7 +20,7 @@ If you are in the health, wellbeing, inspiration or sustainability business, you
 
 At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health and wellness seeking visitors who are looking for You! Something generic fairs can’t provide.
 
-<p>As well as being Bangkok’s first dedicated holistic healing and wellness event, MBSBKK is a charity fundraiser, supporting local projects, directly benefiting Thai people. <Link to="/charities">Find out more about our charities here.</Link></p> 
+<p>As well as being Bangkok’s first dedicated holistic healing and wellness event, MBSBKK is a charity fundraiser, supporting local projects, directly benefiting Thai people. <Link to="/charities">Find out more about our charities here.</Link></p>
 
 <p>Join us and give back. Together we can make a difference.</p>
 
@@ -31,13 +32,29 @@ At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health an
 
 ### Exhibitor’s appreciation:
 
-_“The event exceeded all expectations, the only regret was that our stall was so busy, we wished we would have been able to experience the whole thing more. What a great ‘problem’ to have. We can’t wait for the next one”_
+<IndividualTestimonial
+  text="The event exceeded all expectations, the only regret was that our stall was so busy, we wished we would have been able to experience the whole thing more. What a great ‘problem’ to have. We can’t wait for the next one"
+  bigText="Exceeded All Expectations"
+  location={0}
+/>
 
-_“An amazingly generous event chock full of loving offerings for body mind and soul. Not to mention all the fabulous humans!”_
+<IndividualTestimonial
+  text="An amazingly generous event chock full of loving offerings for body mind and soul. Not to mention all the fabulous humans!"
+  bigText="Amazingly Generous"
+  location={0}
+/>
 
-_“It was such a pleasure to meet so many individuals of like minds! No explanations needed they just got where we were at. I had the most successful two days!”_
+<IndividualTestimonial
+  text="It was such a pleasure to meet so many individuals of like minds! No explanations needed they just got where we were at. I had the most successful two days!"
+  bigText="A Pleasure"
+  location={0}
+/>
 
-_“From a workshop presenter point of view, the event was very well organised! Loved how the assigned volunteers took care of every request we had.”_
+<IndividualTestimonial
+  text="From a workshop presenter point of view, the event was very well organised! Loved how the assigned volunteers took care of every request we had."
+  bigText="Very Well Organised"
+  location={0}
+/>
 
 <div id="inspire" />
 
@@ -125,8 +142,8 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
 
 ---
 
-- MBSBKK is a carefully curated event and places are limited. Please complete all applications fully and in a way that reflects your passion for what you are offering.
+_MBSBKK is a carefully curated event and places are limited. Please complete all applications fully and in a way that reflects your passion for what you are offering._
 
-- Only complete and wholehearted applications can be considered.
+_Only complete and wholehearted applications can be considered._
 
-- Close adherence to deadlines as they arise is essential.
+_Close adherence to deadlines as they arise is essential._
