builds blog list page

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -30,7 +30,7 @@ At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health an
 
 **Take a stall to sell**, promote or showcase your products or services, in a purchase ready, niche customer environment. Our visitors are gonna want what you have!
 
-### Exhibitor’s appreciation:
+### appreciation:
 
 <IndividualTestimonial
   text="The event exceeded all expectations, the only regret was that our stall was so busy, we wished we would have been able to experience the whole thing more. What a great ‘problem’ to have. We can’t wait for the next one"
@@ -41,18 +41,6 @@ At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health an
 <IndividualTestimonial
   text="An amazingly generous event chock full of loving offerings for body mind and soul. Not to mention all the fabulous humans!"
   bigText="Amazingly Generous"
-  location={0}
-/>
-
-<IndividualTestimonial
-  text="It was such a pleasure to meet so many individuals of like minds! No explanations needed they just got where we were at. I had the most successful two days!"
-  bigText="A Pleasure"
-  location={0}
-/>
-
-<IndividualTestimonial
-  text="From a workshop presenter point of view, the event was very well organised! Loved how the assigned volunteers took care of every request we had."
-  bigText="Very Well Organised"
   location={0}
 />
 
@@ -78,6 +66,14 @@ At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health an
 
 Offer a 50 minute experiential **workshop or presentation**. Showcase your expertise and share your passions with a targeted and curated audience.
 
+### appreciation:
+
+<IndividualTestimonial
+  text="From a workshop presenter point of view, the event was very well organised! Loved how the assigned volunteers took care of every request we had."
+  bigText="Very Well Organised"
+  location={0}
+/>
+
 <DoubleButton
   link1={{
     link:
@@ -97,6 +93,14 @@ Offer a 50 minute experiential **workshop or presentation**. Showcase your exper
 <div id="sponsor" />
 
 Provide one on one paid **taster sessions** for visitors in the Healing Zone.
+
+### appreciation:
+
+<IndividualTestimonial
+  text="It was such a pleasure to meet so many individuals of like minds! No explanations needed they just got where we were at. I had the most successful two days!"
+  bigText="A Pleasure"
+  location={0}
+/>
 
 <DoubleButton
   link1={{
