adds a testimonial to get involved page

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -116,22 +116,15 @@ Provide one on one paid **taster sessions** for visitors in the Healing Zone.
 
 ---
 
-## Sponsor us
-
-<div id="volunteer" />
-
-Support us and be seen by your target customers. Contact us here to discuss sponsorship opportunities.
-
-<OutButton
-  path="mailto:info@mbsbkk.com?subject=Sponsorship%Enquiry"
-  text="Sponsor Us"
-/>
-
----
-
 ## Volunteer with us
 
 Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the community and share your energy. Our dedicated team of volunteers support the smooth running of the fair, whilst getting to experience it in the most intimate way.
+
+<IndividualTestimonial
+  text="It was such a deep pleasure to volunteer at MBSBKK and to support Alison and Evelin in running such a magical event. They were wonderful to work with, and it was a joy to see all the diverse offerings at the event."
+  bigText="A deep pleasure"
+  location={0}
+/>
 
 <DoubleButton
   link1={{
@@ -142,6 +135,19 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
     link: "https://forms.gle/Y2WrqjqKo2Qw1GxG7",
     text: "Volunteer CM",
   }}
+/>
+
+---
+
+## Sponsor us
+
+<div id="volunteer" />
+
+Support us and be seen by your target customers. Contact us here to discuss sponsorship opportunities.
+
+<OutButton
+  path="mailto:info@mbsbkk.com?subject=Sponsorship%Enquiry"
+  text="Sponsor Us"
 />
 
 ---
