adds google analytics, adds social to mobile menu, some small style changes

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -26,13 +26,13 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 ## Bangkok:
 
-**Date:** 29th February - 1st March 2020
+<p><AltColorStrong color="primary">Date: </ AltColorStrong> 29th February - 1st March 2020</p>
 
-**Event Times:** 9:30am - 5pm both days
+<p><AltColorStrong color="primary">Event Times: </ AltColorStrong> 9:30am - 5pm both days</p>
 
-**Event Location:** [Jasmine City Hotel, Sukhumvit Soi 23, Asok](https://goo.gl/maps/jshrHKFmhR8h7ms7A)
+<p><AltColorStrong color="primary">Event Location: </ AltColorStrong> <a href="https://goo.gl/maps/jshrHKFmhR8h7ms7A">Jasmine City Hotel, Sukhumvit Soi 23, Asok</a></p>
 
-**Advanced ticket bookings open on January 5th 2020**
+<p><AltColorStrong color="primary">Advanced ticket bookings open on January 5th 2020 </ AltColorStrong></p>
 
 ---
 
