adds link to form

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -4,6 +4,7 @@ type: "getInvolved"
 ---
 
 import OutButton from "../../components/Utility/OutButton/OutButton"
+import OutButton from "../../components/Utility/CTAButton/CTAButton"
 import DoubleButton from "../../components/Utility/DoubleButton/DoubleButton"
 import IndividualTestimonial from "../../components/Utility/IndividualTestimonial/IndividualTestimonial"
 import { Link } from "gatsby"
@@ -145,10 +146,7 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
 
 Support us and be seen by your target customers. Contact us here to discuss sponsorship opportunities.
 
-<OutButton
-  path="mailto:info@mbsbkk.com?subject=Sponsorship%Enquiry"
-  text="Sponsor Us"
-/>
+<CTAButton path="/sponsor" text="Sponsor Us" />
 
 ---
 
