--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -4,7 +4,7 @@ type: "getInvolved"
 ---
 
 import OutButton from "../../components/Utility/OutButton/OutButton"
-import OutButton from "../../components/Utility/CTAButton/CTAButton"
+import CTAButton from "../../components/Utility/CTAButton/CTAButton"
 import DoubleButton from "../../components/Utility/DoubleButton/DoubleButton"
 import IndividualTestimonial from "../../components/Utility/IndividualTestimonial/IndividualTestimonial"
 import { Link } from "gatsby"
