adds buy ticket button to desktop and mobile menu, scaffolds vendor directory

--- a/src/markdown/fairInfo/exhibitors.mdx
+++ b/src/markdown/fairInfo/exhibitors.mdx
@@ -5,6 +5,8 @@ number: 2
 queryName: "fairInfoExhibitors"
 ---
 
+import VendorDirectory from "../../components/VendorDirectory/VendorDirectory"
+
 # Exhibitors
 
 The Mind Body Spirit Fair is a health and wellness shopping paradise!
@@ -14,3 +16,5 @@ Featuring a diverse range of products and services to try and buy including arti
 With over 80 local and international stallholders, there’s something for everyone to discover at MBSBKK!
 
 **Exhibitors Directory Coming soon!**
+
+<VendorDirectory />
