troubleshoots error in displaying blog card title and subtitle

--- a/src/markdown/fairInfo/workshopsAndSeminars.mdx
+++ b/src/markdown/fairInfo/workshopsAndSeminars.mdx
@@ -5,6 +5,8 @@ number: 5
 queryName: "fairInfoWorkshopsAndSeminars"
 ---
 
+import Schedules from "../../components/Schedules/Schedules"
+
 # Workshops and Seminars
 
 Find a diverse schedule of over 25 workshops, to feed your mind and
@@ -19,3 +21,5 @@ space.
 Immerse yourself in inspiration. Find what you are seeking!
 
 **Schedules coming soon!**
+
+<Schedules />
