centers directory buttons on mobile, adds healing zone directory, scaffolds healing zone schedule

--- a/src/markdown/fairInfo/healingZone.mdx
+++ b/src/markdown/fairInfo/healingZone.mdx
@@ -5,6 +5,9 @@ number: 3
 queryName: "fairInfoHealingZone"
 ---
 
+import HZDirectory from "../../components/HZDirectory/HZDirectory"
+import CMHealingZoneSchedule from "../../components/Schedules/CMHealingZoneSchedule/CMHealingZoneSchedule"
+
 # Healing Zone
 
 Try some tarot, sample some sound healing, connect with a consultant
@@ -16,4 +19,6 @@ We have a host of expert holistic practitioners waiting for you.
 
 Advanced booking highly recommended
 
-**Practitioner directory coming soon!**
+<CMHealingZoneSchedule />
+
+<HZDirectory />
