adds workshop directory

--- a/src/markdown/fairInfo/workshopsAndSeminars.mdx
+++ b/src/markdown/fairInfo/workshopsAndSeminars.mdx
@@ -6,6 +6,7 @@ queryName: "fairInfoWorkshopsAndSeminars"
 ---
 
 import Schedules from "../../components/Schedules/Schedules"
+import WorkshopDirectory from "../../components/WorkshopDirectory/WorkshopDirectory"
 
 # Workshops and Seminars
 
@@ -21,3 +22,5 @@ space.
 Immerse yourself in inspiration. Find what you are seeking!
 
 <Schedules />
+
+<WorkshopDirectory />
