--- a/src/markdown/fairInfo/healingZone.mdx
+++ b/src/markdown/fairInfo/healingZone.mdx
@@ -17,7 +17,7 @@ Explore alternative and complementary approaches to health and wellbeing inside 
 
 We have a host of expert holistic practitioners waiting for you.
 
-Advanced booking highly recommended
+Please come early to secure your Healing Zone session.
 
 <CMHealingZoneSchedule />
 
