contentful housekeeping and requisite updates, added buttons for booking workshops

--- a/src/markdown/fairInfo/workshopsAndSeminars.mdx
+++ b/src/markdown/fairInfo/workshopsAndSeminars.mdx
@@ -5,6 +5,7 @@ number: 5
 queryName: "fairInfoWorkshopsAndSeminars"
 ---
 
+import OutButton from "../../components/Utility/OutButton/OutButton"
 import Schedules from "../../components/Schedules/Schedules"
 import WorkshopDirectory from "../../components/WorkshopDirectory/WorkshopDirectory"
 
@@ -20,6 +21,8 @@ series running throughout both days, now in a dedicated self contained
 space.
 
 Immerse yourself in inspiration. Find what you are seeking!
+
+<OutButton path="https://google.com" text="Book A Workshop" type="2" />
 
 <Schedules />
 
