Adds name to HZ Prac, small changes to copy

--- a/src/markdown/fairInfo/workshopsAndSeminars.mdx
+++ b/src/markdown/fairInfo/workshopsAndSeminars.mdx
@@ -11,7 +11,9 @@ import WorkshopDirectory from "../../components/WorkshopDirectory/WorkshopDirect
 
 # Workshops and Seminars
 
-Find a diverse schedule of over 25 workshops, to feed your mind and
+Check out the schedule and directory below to plan your fair experience.
+
+Find a diverse range of over 25 workshops, to feed your mind and
 body; from movement, nutrition and personal development to astrology,
 essential oils and spiritual guidance.
 
@@ -22,8 +24,14 @@ space.
 
 Immerse yourself in inspiration. Find what you are seeking!
 
+Book ahead to secure your place!
+
 <OutButton path="https://google.com" text="Book A Workshop" type="2" />
 
 <Schedules />
+
+<OutButton path="https://google.com" text="Book A Workshop" type="2" />
+
+---
 
 <WorkshopDirectory />
