final changes to v2, booking buttons have working links, fixed card title display issue

--- a/src/markdown/fairInfo/workshopsAndSeminars.mdx
+++ b/src/markdown/fairInfo/workshopsAndSeminars.mdx
@@ -26,11 +26,19 @@ Immerse yourself in inspiration. Find what you are seeking!
 
 Book ahead to secure your place!
 
-<OutButton path="https://google.com" text="Book A Workshop" type="2" />
+<OutButton
+  path="https://mbscmbooking.as.me/schedule.php"
+  text="Book A Workshop"
+  type="2"
+/>
 
 <Schedules />
 
-<OutButton path="https://google.com" text="Book A Workshop" type="2" />
+<OutButton
+  path="https://mbscmbooking.as.me/schedule.php"
+  text="Book A Workshop"
+  type="2"
+/>
 
 ---
 
