small change to exhibitor page copy

--- a/src/markdown/fairInfo/exhibitors.mdx
+++ b/src/markdown/fairInfo/exhibitors.mdx
@@ -13,6 +13,6 @@ The Mind Body Spirit Fair is a health and wellness shopping paradise!
 
 Featuring a diverse range of products and services to try and buy including artisan and specialist food items, organic and sustainable products, soulful art, natural beauty products, pure essential oils and herbs, spirit inspired jewellery, fitness, yoga and meditation related items, and a wealth of other inspired lifestyle products.
 
-With over 80 local and international stallholders, there’s something for everyone to discover at MBSBKK!
+With over 30 local and international stallholders, there’s something for everyone to discover at the Mind Body Spirit Fair.
 
 <VendorDirectory />
