adds ticket price info, changes up some buttons

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -9,6 +9,7 @@ import MailChimpContainer from "../../components/Spacing/MailChimpContainer/Mail
 import SocialContainer from "../../components/Spacing/SocialContainer/SocialContainer"
 import MailChimp from "../../components/Utility/MailChimp/MailChimp"
 import Social from "../../components/Layout/Header/Social/Social"
+import OutButton from "../../components/Utility/OutButton/OutButton"
 
 # Fair Info
 
@@ -22,7 +23,15 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 <p><AltColorStrong >Event Location: </ AltColorStrong> <a href="https://goo.gl/maps/LPfGs6XuV9yvQqWr8">ChiangMai&Co</a></p>
 
-<p><AltColorStrong >Advanced ticket bookings open on October 25th 2019 </ AltColorStrong></p>
+<p><AltColorStrong >Online Tickets:</ AltColorStrong> ฿ 300 1 Day / ฿ 500 2 Days</p>
+
+<p><AltColorStrong >Door Tickets:</ AltColorStrong> ฿ 400 1 Day / ฿ 700 2 Days</p>
+
+<OutButton
+  path="https://www.ticketmelon.com/mbsfairbkk/mindbodyspiritfairchiangmai"
+  text="Book Now"
+  type="2"
+/>
 
 ## Bangkok:
 
