last minute copy and menu changes before 1st event

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -23,9 +23,13 @@ We are so excited to welcome you to our upcoming inspiring events!
 
 <p><AltColorStrong >Event Location: </ AltColorStrong> <a href="https://goo.gl/maps/LPfGs6XuV9yvQqWr8">ChiangMai&Co</a></p>
 
+_The event venue is an outside space. There will be limited parking available._
+
 <p><AltColorStrong >Online Tickets:</ AltColorStrong> ฿ 300 1 Day / ฿ 500 2 Days</p>
 
 <p><AltColorStrong >Door Tickets:</ AltColorStrong> ฿ 400 1 Day / ฿ 700 2 Days</p>
+
+_All workshops are free after admission._
 
 <OutButton
   path="https://www.ticketmelon.com/mbsfairbkk/mindbodyspiritfairchiangmai"
