removes booking buttons for HZ and Workshops

--- a/src/markdown/fairInfo/workshopsAndSeminars.mdx
+++ b/src/markdown/fairInfo/workshopsAndSeminars.mdx
@@ -24,21 +24,21 @@ space.
 
 Immerse yourself in inspiration. Find what you are seeking!
 
-Book ahead to secure your place!
+<!-- Book ahead to secure your place! -->
 
-<OutButton
+<!--  <OutButton
   path="https://mbscmbooking.as.me/schedule.php"
   text="Book A Workshop"
   type="2"
-/>
+/>  -->
 
 <Schedules />
 
-<OutButton
+<!--  <OutButton
   path="https://mbscmbooking.as.me/schedule.php"
   text="Book A Workshop"
   type="2"
-/>
+/>  -->
 
 ---
 
