removes CM booking buttons

--- a/src/markdown/fairInfo/fairInfo.mdx
+++ b/src/markdown/fairInfo/fairInfo.mdx
@@ -31,11 +31,11 @@ _The event venue is an outside space. There will be limited parking available._
 
 _All workshops are free after admission._
 
-<OutButton
+<!-- {/* <OutButton
   path="https://www.ticketmelon.com/mbsfairbkk/mindbodyspiritfairchiangmai"
   text="Book Now"
   type="2"
-/>
+/>  -->
 
 ## Bangkok:
 
