--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -47,7 +47,7 @@ At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health an
 
 <div id="inspire" />
 
-<DoubleButton
+<!-- <DoubleButton
   link1={{
     link:
       "https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form",
@@ -57,6 +57,11 @@ At the Mind Body Spirit Fair Bangkok you’ll find a targeted crowd of health an
     link: "https://forms.gle/zYeTpe8oyE9JRTCi6",
     text: "Apply Now CM",
   }}
+/> -->
+
+<OutButton
+  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
+  text="Apply Now BKK"
 />
 
 ---
@@ -75,7 +80,7 @@ Offer a 50 minute experiential **workshop or presentation**. Showcase your exper
   location={0}
 />
 
-<DoubleButton
+<!-- {/* <DoubleButton
   link1={{
     link:
       "https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form",
@@ -85,6 +90,11 @@ Offer a 50 minute experiential **workshop or presentation**. Showcase your exper
     link: "https://forms.gle/zYeTpe8oyE9JRTCi6",
     text: "Apply Now CM",
   }}
+/>  -->
+
+<OutButton
+  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
+  text="Apply Now BKK"
 />
 
 ---
@@ -103,7 +113,7 @@ Provide one on one paid **taster sessions** for visitors in the Healing Zone.
   location={0}
 />
 
-<DoubleButton
+<!--  <DoubleButton
   link1={{
     link:
       "https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form",
@@ -113,6 +123,11 @@ Provide one on one paid **taster sessions** for visitors in the Healing Zone.
     link: "https://forms.gle/zYeTpe8oyE9JRTCi6",
     text: "Apply Now CM",
   }}
+/> -->
+
+<OutButton
+  path="https://docs.google.com/forms/d/e/1FAIpQLSedMMW0gFzGfKHzWqXKj1Rp8Z6ll_L3HcfrKKnfNkgerY16EQ/viewform?usp=send_form"
+  text="Apply Now BKK"
 />
 
 ---
@@ -127,7 +142,7 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
   location={0}
 />
 
-<DoubleButton
+<!-- <DoubleButton
   link1={{
     link: "https://goo.gl/forms/ALHLQ1i6y7nNEBpb2",
     text: "Volunteer BKK",
@@ -136,7 +151,9 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
     link: "https://forms.gle/Y2WrqjqKo2Qw1GxG7",
     text: "Volunteer CM",
   }}
-/>
+/> -->
+
+<OutButton path="https://goo.gl/forms/ALHLQ1i6y7nNEBpb2" text="Volunteer BKK" />
 
 ---
 
