finishes modal, adds sponsor message, fixes some css

--- a/src/markdown/getInvolved/getInvolved.mdx
+++ b/src/markdown/getInvolved/getInvolved.mdx
@@ -163,7 +163,10 @@ Join our MBSBKK Spirit Team! Experience the vibe, immerse yourself in the commun
 
 Support us and be seen by your target customers. Contact us here to discuss sponsorship opportunities.
 
-<CTAButton path="/sponsor" text="Sponsor Us" />
+<div className="cta-button-wrapper">
+  <CTAButton path="/sponsor" text="Sponsor Us" />
+</div>
+
 
 ---
 
